Bug 428045 – Incorrect transparency in .png image. sr=tor, r=pavlov